# qoi

./: Cargo.toml
benches/: benchmark.rs
src/: lib.rs  parser.rs  tests.rs
