[package]
name = "qoi-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", default-features = false }
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.5.1"
image = { version = "0.24.7", default-features = false, features = [
    "qoi",
    "png",
] }

[[bench]]
name = "benchmark"
harness = false
